@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2015-2021  Hybird
+#    Copyright (C) 2015-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -21,7 +21,7 @@ from django.dispatch import receiver
 from creme.creme_core.signals import pre_uninstall_flush
 
 
-@receiver(pre_uninstall_flush)
+@receiver(pre_uninstall_flush, dispatch_uid='reports-manage_uninstallation')
 def _uninstall_reports(sender, content_types, verbosity, stdout_write, style, **kwargs):
     from .models import Field
 
@@ -41,7 +41,7 @@ def _uninstall_reports(sender, content_types, verbosity, stdout_write, style, **
         sub_report = rfield.sub_report
         stdout_write(
             f' Beware: the report "{sub_report}" (id={sub_report.id}) was '
-            f'used as sub-report by : "{report}" (id={report.id})',
+            f'used as sub-report by: "{report}" (id={report.id})',
             style.NOTICE
         )
         rfield.delete()
